styles/widgets/common/drawer.less
.dx-drawer {
    height: 100%;
    width: 100%;
    
    .touch-action(pinch-zoom);
}

.dx-drawer-wrapper {
    position: relative;
    overflow: hidden;
    height: 100%;
}

.dx-drawer-panel-content {
    position: absolute;
    top: 0px;
    bottom: 0px;
    z-index: 1;
}

.dx-drawer-right .dx-drawer-panel-content {
    right: 0px;
}

.dx-drawer-left .dx-drawer-panel-content {
    left: 0px;
}

.dx-drawer-content {
    overflow: hidden;
    width: 100%;
    height: 100%;
    top: 0;
}

.dx-drawer-shader {
    position: absolute;
    top: 0;
    height: 100%;
    width: 100%;
}

.dx-drawer-push {
    &.dx-drawer-bottom {
        .dx-drawer-panel-content {
            top: auto;
        }
    }
}

.dx-drawer-shrink {
    .dx-drawer-panel-content {
        position: relative;
        overflow: hidden;
        flex: 0 0 auto;
        height: 100%;
    }
    .dx-drawer-wrapper {
        flex: 1 0 auto;
        display: flex;
        flex-direction: row;
    }
    .dx-drawer-content {
        position: relative;
        flex: 1 1 auto;
    }

    &.dx-drawer-top,
    &.dx-drawer-bottom {
        .dx-drawer-wrapper {
            flex-direction: column;
        }
    }
}

.dx-drawer-overlap {
    .dx-drawer-wrapper {
        overflow: visible;
    }
}

.dx-overlay-wrapper.dx-drawer-panel-content {
    overflow: visible;
    right: auto;
    left: auto;
}

